add align centered skills

--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="resume__block">
+            <div class="skills">
+                <h3 class="skills__header">Skills</h3>
+                <p class="skills__text">Soft skills for Team collaboration</p>
+                <p class="skills__text">Resilience and fast learning</p>
+                <p class="skills__text">Structure thinking for scaling resolutions</p>
+                <p class="skills__text">Frontend, Backend and some CI/CD knowledges</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
