added experience to resume

--- a/index.html
+++ b/index.html
@@ -96,6 +96,55 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="resume__block">
+
+            <div class="experiences">
+                <h3 class="experiences__header">Experiences</h3>
+                <div class="experiences-listing">
+
+
+                    <div class="experiences__company">
+                        <div class="experiences__company-header">
+                            <span class="experiences__company-header-durability">Jan 2020- June 2021</span>
+                            <h3 class="experiences__company-header-name"><a href="https://www.pluggy.ai/en"
+                                    target="_blank">Pluggy</a></h3>
+                        </div>
+
+                        <div class="experiences__company-project">
+                            <span class="experiences__company-project-role">Backend software developer</span>
+                            <h3 class="experiences__company-project-name">Pluggy</h3>
+                            <ul class="experiences__company-project-responsibilities">
+                                <li>Backend Architecture</li>
+                                <li>TDD development</li>
+                                <li>API Integration</li>
+                                <li>Code Maintenance</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="experiences__company">
+                        <div class="experiences__company-header">
+                            <span class="experiences__company-header-durability">Jan 2022- Current</span>
+                            <h3 class="experiences__company-header-name"><a
+                                    href="https://compras-comunitarias-ag.vercel.app/" target="_blank">CoCo</a></h3>
+                        </div>
+
+                        <div class="experiences__company-project">
+                            <span class="experiences__company-project-role">Full-Stack Developer</span>
+                            <h3 class="experiences__company-project-name">Compras Comunitarias</h3>
+                            <ul class="experiences__company-project-responsibilities">
+                                <li>Backend Architecture</li>
+                                <li>Frontend Architecture</li>
+                                <li>API Integration</li>
+                                <li>Code Maintenance</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
