--- a/index.html
+++ b/index.html
@@ -145,6 +145,57 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        <div class="additional-info fv">
+            <h3 class="additional-info__education-header">Education</h3>
+            <div class="education-listing">
+
+
+                <div class="additional-info__education">
+                    <div class="additional-info__education-university">
+                        <span class="additional-info__education-university-durability"> 2024 </span>
+                        <h3 class="additional-info__education-university-speciality">Full-Stack Development Bootcamp
+                        </h3>
+                        <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                    </div>
+                </div>
+
+                <div class="additional-info__languages">
+                    <h3 class="additional-info__languages-header">Languages</h3>
+                    <p class="additional-info__languages-item">English</p>
+                </div>
+                <div class="additional-info__education">
+                    <div class="additional-info__education-university">
+                        <span class="additional-info__education-university-durability"> 2020 </span>
+                        <h3 class="additional-info__education-university-speciality">Full-Stack Development Bootcamp
+                        </h3>
+                        <p class="additional-info__education-university-name">Soy Henry Argentina</p>
+                    </div>
+                </div>
+
+                <div class="additional-info__languages">
+                    <h3 class="additional-info__languages-header">Languages</h3>
+                    <p class="additional-info__languages-item">English</p>
+                    <p class="additional-info__languages-item">Spanish</p>
+                </div>
+                <div class="additional-info__education">
+                    <div class="additional-info__education-university">
+                        <span class="additional-info__education-university-durability"> 2019 </span>
+                        <h3 class="additional-info__education-university-speciality">Bachelor in Philosophy
+                        </h3>
+                        <p class="additional-info__education-university-name">National University of Cordoba</p>
+                    </div>
+                </div>
+
+                <div class="additional-info__languages">
+                    <h3 class="additional-info__languages-header">Languages</h3>
+                    <p class="additional-info__languages-item">Spanish</p>
+                    <p class="additional-info__languages-item">Portugues</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
