added extra info: hobbies and interests

--- a/index.html
+++ b/index.html
@@ -20,49 +20,53 @@
                         <div class="contact-info__block"></div>
 
                         <div class="contact-info__block contact-info__block--center">
+                            <div class="contact-info_icons-wrapper">
+                                <a href="https://maps.app.goo.gl/dtoC42dr1oXc69pC9" target="_blank" rel="author"
+                                    class="contact-info__item">
+                                    <div class="contact-info__item-icon-wrapper">
+                                        <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg"
+                                            viewBox="0 0 384 512">
+                                            <path d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0
+                                      192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535
+                                      13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817
+                                      80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"></path>
+                                        </svg>
+                                    </div>
+                                    <span>Valencia, Spain</span>
+                                </a>
+                                <a href="https://www.linkedin.com/in/guillermomartosventurini/" target="_blank"
+                                    rel="author" class="contact-info__item">
+                                    <div class="contact-info__item-icon-wrapper">
+                                        <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg"
+                                            viewBox="0 0 448 512">
+                                            <path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9
+                                      480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4
+                                      416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9
+                                      96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5
+                                      38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9
+                                      27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5
+                                      62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path>
+                                        </svg>
+                                    </div>
+                                    <span>LinkedIn profile</span>
+                                </a>
+                                <a href="https://github.com/GuillermoMartos?tab=repositories" target="_blank"
+                                    rel="author" class="contact-info__item">
+                                    <div class="contact-info__item-icon-wrapper">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                                            <path
+                                                d="M320 192h17.1c22.1 38.3 63.5 64 110.9 64c11 0 21.8-1.4 32-4v4 32V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V339.2L280 448h56c17.7 0 32 14.3 32 32s-14.3 32-32 32H192c-53 0-96-43-96-96V192.5c0-16.1-12-29.8-28-31.8l-7.9-1c-17.5-2.2-30-18.2-27.8-35.7s18.2-30 35.7-27.8l7.9 1c48 6 84.1 46.8 84.1 95.3v85.3c34.4-51.7 93.2-85.8 160-85.8zm160 26.5v0c-10 3.5-20.8 5.5-32 5.5c-28.4 0-54-12.4-71.6-32h0c-3.7-4.1-7-8.5-9.9-13.2C357.3 164 352 146.6 352 128v0V32 12 10.7C352 4.8 356.7 .1 362.6 0h.2c3.3 0 6.4 1.6 8.4 4.2l0 .1L384 21.3l27.2 36.3L416 64h64l4.8-6.4L512 21.3 524.8 4.3l0-.1c2-2.6 5.1-4.2 8.4-4.2h.2C539.3 .1 544 4.8 544 10.7V12 32v96c0 17.3-4.6 33.6-12.6 47.6c-11.3 19.8-29.6 35.2-51.4 42.9zM432 128a16 16 0 1 0 -32 0 16 16 0 1 0 32 0zm48 16a16 16 0 1 0 0-32 16 16 0 1 0 0 32z" />
+                                        </svg>
+                                    </div>
+                                    <span>Github repositories</span>
+                                </a>
+                            </div>
                             <img class="contact-info__avatar" src="./assets/Gui.png" alt="Avatar" />
                         </div>
 
                         <div class="contact-info__block"></div>
                     </div>
                 </div>
-                <a href="https://maps.app.goo.gl/dtoC42dr1oXc69pC9" target="_blank" rel="author"
-                    class="contact-info__item">
-                    <div class="contact-info__item-icon-wrapper">
-                        <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-                            <path d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0
-                          192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535
-                          13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817
-                          80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"></path>
-                        </svg>
-                    </div>
-                    <span>Valencia, Spain</span>
-                </a>
-                <a href="https://www.linkedin.com/in/guillermomartosventurini/" target="_blank" rel="author"
-                    class="contact-info__item">
-                    <div class="contact-info__item-icon-wrapper">
-                        <svg class="contact-info__item-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                            <path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9
-                          480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4
-                          416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9
-                          96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5
-                          38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9
-                          27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5
-                          62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path>
-                        </svg>
-                    </div>
-                    <span>LinkedIn profile</span>
-                </a>
-                <a href="https://github.com/GuillermoMartos?tab=repositories" target="_blank" rel="author"
-                    class="contact-info__item">
-                    <div class="contact-info__item-icon-wrapper">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
-                            <path
-                                d="M320 192h17.1c22.1 38.3 63.5 64 110.9 64c11 0 21.8-1.4 32-4v4 32V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V339.2L280 448h56c17.7 0 32 14.3 32 32s-14.3 32-32 32H192c-53 0-96-43-96-96V192.5c0-16.1-12-29.8-28-31.8l-7.9-1c-17.5-2.2-30-18.2-27.8-35.7s18.2-30 35.7-27.8l7.9 1c48 6 84.1 46.8 84.1 95.3v85.3c34.4-51.7 93.2-85.8 160-85.8zm160 26.5v0c-10 3.5-20.8 5.5-32 5.5c-28.4 0-54-12.4-71.6-32h0c-3.7-4.1-7-8.5-9.9-13.2C357.3 164 352 146.6 352 128v0V32 12 10.7C352 4.8 356.7 .1 362.6 0h.2c3.3 0 6.4 1.6 8.4 4.2l0 .1L384 21.3l27.2 36.3L416 64h64l4.8-6.4L512 21.3 524.8 4.3l0-.1c2-2.6 5.1-4.2 8.4-4.2h.2C539.3 .1 544 4.8 544 10.7V12 32v96c0 17.3-4.6 33.6-12.6 47.6c-11.3 19.8-29.6 35.2-51.4 42.9zM432 128a16 16 0 1 0 -32 0 16 16 0 1 0 32 0zm48 16a16 16 0 1 0 0-32 16 16 0 1 0 0 32z" />
-                        </svg>
-                    </div>
-                    <span>Github repositories</span>
-                </a>
             </div>
         </div>
     </main>
@@ -150,83 +154,118 @@
     </div>
 
     <div class="container">
-        <div class="additional-info fv">
-            <h3 class="additional-info__education-header">Education</h3>
-            <div class="education-listing">
+        <div class="resume__block">
+
+            <div class="additional-info fv">
+                <h3 class="additional-info__education-header">Education</h3>
+                <div class="education-listing">
 
 
-                <div class="education-block">
-                    <div class="additional-info__education">
-                        <div class="additional-info__education-university">
-                            <span class="additional-info__education-university-durability"> 2024 </span>
-                            <h3 class="additional-info__education-university-speciality">Full-Stack Development Bootcamp
-                            </h3>
-                            <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                    <div class="education-block">
+                        <div class="additional-info__education">
+                            <div class="additional-info__education-university">
+                                <span class="additional-info__education-university-durability"> 2024 </span>
+                                <h3 class="additional-info__education-university-speciality">Full-Stack Development
+                                    Bootcamp
+                                </h3>
+                                <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                            </div>
+                        </div>
+
+                        <div class="additional-info__languages">
+                            <h3 class="additional-info__languages-header">Languages</h3>
+                            <p class="additional-info__languages-item">English</p>
+                        </div>
+
+                    </div>
+
+                    <div class="education-block">
+
+                        <div class="additional-info__education">
+                            <div class="additional-info__education-university">
+                                <span class="additional-info__education-university-durability"> 2020 </span>
+                                <h3 class="additional-info__education-university-speciality">Full-Stack Development
+                                    Bootcamp
+                                </h3>
+                                <p class="additional-info__education-university-name">Soy Henry Argentina</p>
+                            </div>
+                        </div>
+
+                        <div class="additional-info__languages">
+                            <h3 class="additional-info__languages-header">Languages</h3>
+                            <p class="additional-info__languages-item">English</p>
+                            <p class="additional-info__languages-item">Spanish</p>
                         </div>
                     </div>
 
-                    <div class="additional-info__languages">
-                        <h3 class="additional-info__languages-header">Languages</h3>
-                        <p class="additional-info__languages-item">English</p>
-                    </div>
+                    <div class="education-block">
 
-                </div>
+                        <div class="additional-info__education">
+                            <div class="additional-info__education-university">
+                                <span class="additional-info__education-university-durability"> 2019 </span>
+                                <h3 class="additional-info__education-university-speciality">Python Data Science
+                                    Bootcamp
+                                </h3>
+                                <p class="additional-info__education-university-name">Technical University of Cordoba
+                                </p>
+                            </div>
+                        </div>
 
-                <div class="education-block">
-
-                    <div class="additional-info__education">
-                        <div class="additional-info__education-university">
-                            <span class="additional-info__education-university-durability"> 2020 </span>
-                            <h3 class="additional-info__education-university-speciality">Full-Stack Development Bootcamp
-                            </h3>
-                            <p class="additional-info__education-university-name">Soy Henry Argentina</p>
+                        <div class="additional-info__languages">
+                            <h3 class="additional-info__languages-header">Languages</h3>
+                            <p class="additional-info__languages-item">Spanish</p>
+                            <p class="additional-info__languages-item">English</p>
                         </div>
                     </div>
 
-                    <div class="additional-info__languages">
-                        <h3 class="additional-info__languages-header">Languages</h3>
-                        <p class="additional-info__languages-item">English</p>
-                        <p class="additional-info__languages-item">Spanish</p>
-                    </div>
-                </div>
+                    <div class="education-block">
 
-                <div class="education-block">
-
-                    <div class="additional-info__education">
-                        <div class="additional-info__education-university">
-                            <span class="additional-info__education-university-durability"> 2019 </span>
-                            <h3 class="additional-info__education-university-speciality">Python Data Science Bootcamp
-                            </h3>
-                            <p class="additional-info__education-university-name">Technical University of Cordoba</p>
+                        <div class="additional-info__education">
+                            <div class="additional-info__education-university">
+                                <span class="additional-info__education-university-durability"> 2018 </span>
+                                <h3 class="additional-info__education-university-speciality">Bachelor in Philosophy
+                                </h3>
+                                <p class="additional-info__education-university-name">National University of Cordoba</p>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="additional-info__languages">
-                        <h3 class="additional-info__languages-header">Languages</h3>
-                        <p class="additional-info__languages-item">Spanish</p>
-                        <p class="additional-info__languages-item">English</p>
-                    </div>
-                </div>
-
-                <div class="education-block">
-
-                    <div class="additional-info__education">
-                        <div class="additional-info__education-university">
-                            <span class="additional-info__education-university-durability"> 2018 </span>
-                            <h3 class="additional-info__education-university-speciality">Bachelor in Philosophy
-                            </h3>
-                            <p class="additional-info__education-university-name">National University of Cordoba</p>
+                        <div class="additional-info__languages">
+                            <h3 class="additional-info__languages-header">Languages</h3>
+                            <p class="additional-info__languages-item">Spanish</p>
+                            <p class="additional-info__languages-item">Portugues</p>
                         </div>
-                    </div>
-
-                    <div class="additional-info__languages">
-                        <h3 class="additional-info__languages-header">Languages</h3>
-                        <p class="additional-info__languages-item">Spanish</p>
-                        <p class="additional-info__languages-item">Portugues</p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container">
+
+        <div class="skills">
+            <h3 class="skills__header">Hobbies and interests</h3>
+            <div class="interests-listing">
+
+                <p class="skills__text">Love going on hiking and long walks! </p>
+                <a href="https://es.wikiloc.com/rutas-bicicleta-electrica/figueres-vilabertran-capmany-estanys-ruta-megalitica-cantallops-bosc-tallats-vilarnadal-peralada-fi-63997218"
+                    target="_blank" class="extra_info_links">Check my latest
+                    trial here!</a>
+            </div>
+            <div class="interests-listing">
+
+                <p class="skills__text">Love going to cinema festivals!</p>
+                <a href="https://cosquinfilmfest.com/" target="_blank" class="extra_info_links">Check out my last
+                    festival I attended here!</a>
+            </div>
+
+            <div class="interests-listing">
+                <p class="skills__text">Love to make slow and detailed cooking recipes!</p>
+                <a href="https://cookpad.com/es/recetas/10471371-pescado-a-la-parrilla" target="_blank"
+                    class="extra_info_links">I'm now into homemade bread and grilled fishes!</a>
+            </div>
+
+
+        </div>
+
     </div>
     <footer>
         <div class="contact-icons">
