--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                     <h1 class="contact-info__header">Guillermo L. Martos Venturini</h1>
                     <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
 
+
                     <div class="contact_info_container fh">
-                        <div class="contact-info__block"></div>
 
                         <div class="contact-info__block contact-info__block--center">
                             <div class="contact-info_icons-wrapper">
@@ -61,14 +61,18 @@
                                     <span>Github repositories</span>
                                 </a>
                             </div>
-                            <img class="contact-info__avatar" src="./assets/Gui.png" alt="Avatar" />
-                        </div>
+                            <div id="image-wrapper">
 
-                        <div class="contact-info__block"></div>
+                                <img class="contact-info__avatar" src="./assets/Gui.png" alt="Avatar" />
+                            </div>
+                        </div>
                     </div>
+
+
                 </div>
             </div>
         </div>
+
     </main>
     <div class="container">
         <div class="resume__block">
